fixed overflow scroll

--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -13,7 +13,10 @@ html, body, #root {
   color: #393A36;
   margin: 0;
   lineHeight: '1.5';
-  overflow-y: scroll;
+}
+
+* {
+  overflow: hidden !important;
 }
 
 *, *:before, *:after {
